src/objects/APTS_Quotation_Refreshed_LOD_Temp__c.object
<CustomObject>
    <description>Transacational Object used to hold quotation LOD date temporarily when its refreshed to be used in agreement. Record will be deleted after copying the LOD values to agreement.</description>
    <fields>
        <fullName>APTS_Sales_Office_LP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Quotation Refreshed LODs</relationshipLabel>
        <relationshipName>Quotation_Refreshed_LODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>LSO_Field_Entries__c</referenceTo>
        <relationshipLabel>Quotation Refreshed LODs</relationshipLabel>
        <relationshipName>Quotation_Refreshed_LODs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Account_End_User__c</fullName>
        <description>Field to store account end user id</description>
        <label>Account End User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account__c</fullName>
        <description>Stores Account ID</description>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <description>Field to store distribution channel</description>
        <label>Distribution Channel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterms__c</fullName>
        <label>Incoterms</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organization__c</fullName>
        <description>Field to store sales organization</description>
        <label>Sales Organization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Partner_Account__c</fullName>
        <description>Field to store primary partner account ID</description>
        <label>Primary Partner Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_ID__c</fullName>
        <description>Master-Detail relationship for Quotation</description>
        <label>Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Quotation Refreshed LODs</relationshipLabel>
        <relationshipName>Quotation_Refreshed_LODs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Customer_ID__c</fullName>
        <description>Field to store SAP customer ID</description>
        <label>SAP Customer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Quotation Refreshed LOD (Temp Obj)</label>
    <nameField>
        <displayFormat>TEMPLOD-{000000000}</displayFormat>
        <label>Quotation Refreshed LOD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation Refreshed LODs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>